NIHVIVO-3485: Fixing layout issues for associating a profile to an account in VITRO had created layout issues in vivo for this feature. It's fixed.

--- a/themes/wilma/css/wilma.css
+++ b/themes/wilma/css/wilma.css
@@ -1608,3 +1608,9 @@ input.add-account:active {
 #contact_form textarea {
     width: 40em;
 }
+/* ------------------------------------------------->  */
+/* ASSOCIATE PROFILE ------------------------------->  */
+/* ------------------------------------------------->  */
+#associateProfileBackgroundThree {
+    margin-top:-120px; 
+}
